# Praktikum3

./: CMakeLists.txt  README.md  main.c  math_flaot.c  math_float.h  root.c  root.h
